--- a/views/includes/foooter.ejs
+++ b/views/includes/foooter.ejs
@@ -116,6 +116,9 @@
 							if(typeof isPages !== "undefined" && isPages){
 								getPages();
 							}
+							if(typeof isPages2 !== "undefined" && isPages2){
+								getPages();
+							}
 
 							if(typeof showMovies !== "undefined" && showMovies){
 								getFilmes();
