--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -58,6 +58,9 @@
 		<%- include ("../views/includes/friend-page") %>
 
 		
+		<%- include ("../views/includes/functions") %>
+
+		
 							
 			
 		
