--- a/views/getPerfil.ejs
+++ b/views/getPerfil.ejs
@@ -153,25 +153,34 @@
 
 						
 						var data_id = data._id;
-						
-
-							html += '</div>';						
-							html += '</div>';
+						html += createLikesAvaliacao1(data);
 							
-						html += '</div>';
-						html += '</div>';
-						html += '</li>';
-						html += '</div>';
-
 						
-						html += '<div class="coment-area">';
-					html += '<ul class="we-comet" style="max-height: 150px; overflow-y: scroll;">';
+						
 						data.comments = data.comments.reverse();
 						for (var b = 0; b < data.comments.length; b++) {
 							var comment = data.comments[b];
+							//////////////////////////////////////////////
+							
+
+							/////////////////////////////////////////////
 					
 							if( comment.userId == user._id){
 								var y = comment._id;
+								html += '<p>Likes: <ins>' + comment.likers2.length + '</ins></p>';
+								html += '</div>';						
+							html += '</div>';
+							
+							
+							
+						html += '</div>';
+						html += '</div>';
+						
+						html += '</li>';
+						
+						html += '</div>';
+						html += '<div class="coment-area">';
+							html += '<ul class="we-comet" style="max-height: 150px; overflow-y: scroll;">';
 								console.log(comment._id);
 								comment.replies = comment.replies.reverse();
 								for (var c = 0; c < comment.replies.length; c++) {
@@ -202,19 +211,30 @@
 					
 					
 				html += '</div>';
+				
 							}
+							
 						}
 						
 						
 						
 					}
+					console.log("dataaaa", comment.likers2.length);
+					
 					console.log(data_id);
+					
 					if(response.data.length <= 0){
 						console.log("é menos");
 						console.log(response.data.length);
 					}else{
+						html += '<div class="avaliacao-cl">'
+						html += '<div class="row">'
+							
 
+							
 						html += '<a class="we-reply" href="javascript:void(0);" data-post-id="' + data_id + '" data-comment-id="' + y + '" onclick="prepareToReply(this);" title="Comentar"><button class="comentarHome">Comentar</button></a>';
+						html += '</div>'
+						html += '</div>'
 						
 					}
 					document.getElementById("all-pages").innerHTML = html;
@@ -269,6 +289,7 @@
 						html += '<p>País: <span>' + data.pais + '</span></p>';
 
 						var data_id = data._id;
+						html += createLikesAvaliacao2(data);
 
 						
 
@@ -330,7 +351,14 @@
 						console.log(response.data.length);
 					}else{
 
+						html += '<div class="avaliacao-cl">'
+						html += '<div class="row">'
+							
+
+							
 						html += '<a class="we-reply" href="javascript:void(0);" data-post-id="' + data_id + '" data-comment-id="' + y + '" onclick="prepareToReply2(this);" title="Comentar"><button class="comentarHome">Comentar</button></a>';
+						html += '</div>'
+						html += '</div>'
 						
 					}
 					document.getElementById("all-movies").innerHTML = html;
@@ -389,6 +417,7 @@
 						
 
 						var data_id = data._id;
+						html += createLikesAvaliacao3(data);
 
 							html += '</div>';						
 							html += '</div>';
@@ -449,7 +478,14 @@
 						console.log(response.data.length);
 					}else{
 
-						html += '<a class="we-reply" href="javascript:void(0);" data-post-id="' + data_id + '" data-comment-id="' + y + '" onclick="prepareToReply3(this);" title="Comentar"><button class="comentarHome">Comentar</button></a>';
+						html += '<div class="avaliacao-cl">'
+						html += '<div class="row">'
+							
+
+							html += '<p>Likes: <ins>' + comment.likers2.length + '</ins></p>';
+							html += '<a class="we-reply" href="javascript:void(0);" data-post-id="' + data_id + '" data-comment-id="' + y + '" onclick="prepareToReply3(this);" title="Comentar"><button class="comentarHome">Comentar</button></a>';
+						html += '</div>'
+						html += '</div>'
 						
 					}
 					document.getElementById("all-series").innerHTML = html;
