corrigindo erro heroku internal server error

--- a/views/includes/left-sidebar.ejs
+++ b/views/includes/left-sidebar.ejs
@@ -15,6 +15,11 @@
 				<a href="/notifications">Notificações</a>				
 			</li>
 
+			<li> 
+				<i class="ti-bell"></i>
+				<a href="/createPage">Cadastrar Livro</a>				
+			</li>
+
 			<li>
 				<i class="ti-files"></i>
 				<button class="submenu-1">Cadastrar item</button>
