corrigindo erro heroku internal server error

--- a/views/includes/left-sidebar.ejs
+++ b/views/includes/left-sidebar.ejs
@@ -17,7 +17,7 @@
 
 			<li> 
 				<i class="ti-bell"></i>
-				<a href="/createPage">Cadastrar Livro</a>				
+				<a href="/createGroup">Cadastrar Livro</a>				
 			</li>
 
 			<li>
