--- a/views/createGroup.ejs
+++ b/views/createGroup.ejs
@@ -13,38 +13,98 @@
 						<div class="col-md-6">
 							<div class="central-meta">
 								<div class="editing-info">
-									<h5 class="f-title">
-										<i class="ti-info-alt"></i>
-										Create Group
-									</h5>
+								
+									<h5 class="f-title"> <i class="ti-info-all"></i> Cadastrar Serie </h5>
 									
-									<form onsubmit="return createGroup(this);"> 
-										<div class="form-group">
-											<label> Cover Photo </label>
-											<input type="file" name="coverPhoto" accept="image/*" required />
-											<i class="mtrl-select"></i>
-										</div>
+									<form onsubmit="return createSerie(this);"> 
+
+										<input name="tipo" type="hidden" value="serie">
 										
 										<div class="form-group">
 											<input type="text" name="name" required />
-											<label class="control-label">Group Name </label>
+											<label class="control-label"> Título </label>
 											<i class="mtrl-select"></i>
+											<br><br>
+										</div>
+										
+
+										<div class="form-group">
+											<input type="text" name="diretor" required />
+											<label class="control-label"> Diretor(es) </label>
+											<i class="mtrl-select"></i>
+											<br><br>
+										</div>
+
+										<div class="form-group">
+											<input type="text" name="elenco" required />
+											<label class="control-label"> Elenco Principal </label>
+											<i class="mtrl-select"></i>
+											<br><br>
+										</div>
+
+										<div class="form-group">
+											<input type="text" name="pais" required/>
+											<label class="control-label"> País</label>
+											<i class="mtrl-select"></i>
+											<br><br>
 										</div>
 										
 										<div class="form-group">
-											<textarea rows="4" name="additionalInfo" required></textarea>
-											<label class="control-label">Additional Info </label>
+											<input type="number" name="ano" min="1900" max="2099" step="1" value="2021" required />
+											<label class="control-label"> Ano de lançamento </label>
 											<i class="mtrl-select"></i>
+											<br><br>
 										</div>
+
+										<div class="form-group">
+											<select name="genero" id="genero">
+												<option value="romance">Romance</option>
+												<option value="drama">Drama</option>
+												<option value="biografia">Biografia</option>
+												<option value="aventura">Aventura</option>
+												<option value="comedia">Comédia</option>
+												<option value="terror">Terror</option>
+												<option value="misterio">Mistério</option>
+												<option value="cientifica">Ficção Científica</option>
+												<option value="fantasia">Fantasia</option>
+												<option value="suspense">Suspense</option>
+												<option value="acao">Ação</option>
+												<option value="historico">Histórico</option>
+												<option value="musical">Musical</option>
+												<option value="criminal">Criminal</option>
+												<option value="documentario">Documentário</option>
+												<option value="outros">Outro</option>
+											  </select>
+											<label class="control-label"> Gênero: </label>
+											<i class="mtrl-select"></i>
+											<br><br>
+										</div>
+
+                                        <div class="form-group">
+											<input type="number" name="temporadas" required />
+											<label class="control-label"> Número de temporadas </label>
+											<i class="mtrl-select"></i>
+											<br><br>
+										</div>
+
+										<div class="form-group">
+											<input type="file" name="image" accept="image/*">
+											<label class="control-label"> Poster serie </label>
+											<i class="mtrl-select"></i>
+											<br><br>
+										</div>
+
+										
 										<button type="submit" class="mtr-btn" name="submit">
-											<span> Save </span>
-										</button>
+											<span> Salvar </span>
+										</button>										
 									</form>
 									
 								</div>
 							</div>
 						</div>
-					</div>				
+						
+					</div>
 				</div>
 			</div>
 		</div>
@@ -52,11 +112,11 @@
 </section>
 
 <script>
-	function createGroup(form){
+	function createSerie(form){
 		form.submit.setAttribute("disabled", "disabled");
 		
 		var ajax = new XMLHttpRequest();
-		ajax.open("POST", "/createGroup", true);
+		ajax.open("POST", "/createSerie", true);
 		
 		ajax.onreadystatechange = function(){
 			if(this.readyState == 4 && this.status == 200){
@@ -67,8 +127,15 @@
 				
 				if(response.status == "success"){
 					form.name.value = "";
-					form.additionalInfo.value = "";
-					form.coverPhoto.value = "";
+					form.diretor.value= "";
+                    form.elenco.value = "";
+                    form.pais.value = "";
+					form.ano.value= "";
+                    form.temporadas.value= "";
+					form.image.value= "";
+					form.tipo.value= "";
+					form.genero.value= "";
+
 				}
 			}
 		};
