--- a/views/updateProfile.ejs
+++ b/views/updateProfile.ejs
@@ -1,4 +1,4 @@
-<%- include ("../views/includes/header") %>
+<%- include ("includes/header") %>
 
 <section>
 	<div class="feature-photo">
@@ -21,7 +21,7 @@
 				<div class="user-avatar">
 					<figure>
 
-						<img class="profile-image" id="profile-image" style="width: 100%; height: 150px; object-fit=cover;">
+						<img class="profile-image" id="profile-image" style="width: 100%; height: 150px; object-fit:cover;">
 						<form class="edit-phto" id="form-upload-image" onsubmit="return false;">
 							<i class="fa fa-camera-retro"></i>
 							<label class="fileContainer">
