--- a/views/admin-filmes.ejs
+++ b/views/admin-filmes.ejs
@@ -47,7 +47,7 @@
 
     <script>
 
-var mainURL ="http://localhost:3000";
+var mainURL ="https://damp-oasis-60460.herokuapp.com/";
 
         var isMovies2 = true;
 	 function getMovies(){
