--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -45,7 +45,7 @@
 			</div>
 
 			<script>
-				var mainURL ="http://localhost:3000";
+				var mainURL ="https://damp-oasis-60460.herokuapp.com/";
 
 				var months = ["Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho", "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"]
 
