--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -47,7 +47,7 @@
 
     <script>
 
-var mainURL ="https://damp-oasis-60460.herokuapp.com/";
+var mainURL ="https://damp-oasis-60460.herokuapp.com";
         var isPages2 = true;
 	 function getPages(){
 		var ajax = new XMLHttpRequest();
