--- a/views/getPerfil.ejs
+++ b/views/getPerfil.ejs
@@ -135,8 +135,7 @@
 						html += '<div class="">';
 							
 						html += '<figure>';
-						html += '<a href="/page/' + data._id + '">';
-						html += '</a>';
+						
 
 						
 
@@ -145,7 +144,7 @@
 								}
 						
 						html += '<div class="page-infos2">';
-						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
 						html += '<p> Local de publicação: <span>' + data.autor + '</span></p>';
 						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
 						html += '<p>URL: <span>' + data.editora + '</span></p>';
@@ -195,7 +194,7 @@
 									
 									html += '<li>';
 										html += '<div class="comet-avatar">';
-											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 35px; height: 35px; object-fit: cover; border-radius: 50%">';
+											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 45px; height: 35px; object-fit: cover; border-radius: 50%">';
 										html += '</div>';
 										html += '<div class="we-comment">';
 											html += '<div class="coment-head">';
@@ -276,8 +275,7 @@
 						html += '<div class="">';
 							
 						html += '<figure>';
-						html += '<a href="/page/' + data._id + '">';
-						html += '</a>';
+						
 
 						
 
@@ -287,7 +285,7 @@
 						
 								html += '<div class="page-infos2">';
 							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
-						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
 						html += '<p> Diretor: <span>' + data.diretor + '</span></p>';
 						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
 						html += '<p>Elenco: <span>' + data.elenco + '</span></p>';
@@ -401,8 +399,7 @@
 						html += '<div class="">';
 							
 						html += '<figure>';
-						html += '<a href="/page/' + data._id + '">';
-						html += '</a>';
+						
 
 						
 
@@ -412,7 +409,7 @@
 						
 								html += '<div class="page-infos2">';
 							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
-						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
 						html += '<p> Diretor: <span>' + data.diretor + '</span></p>';
 						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
 						html += '<p>Elenco: <span>' + data.elenco + '</span></p>';
