--- a/views/includes/left-sidebar.ejs
+++ b/views/includes/left-sidebar.ejs
@@ -17,6 +17,19 @@
 				<a href="/notifications">Notificações</a>				
 			</li>
 
+			<li> 
+				<i class="ti-plus"></i>
+				<a href="/suggestFriends">Sugestão de Amizades</a>				
+			</li>
+
+			<!--
+				<li> 
+				<i class="ti-themify-favicon"></i>
+				<a href="/chat">Inbox</a>				
+			</li>
+			 -->
+			
+
 			
 
 			<li>
