--- a/views/home.ejs
+++ b/views/home.ejs
@@ -242,7 +242,7 @@
 								}
 						
 								html += '<div class="page-infos2">';
-                        html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+                        html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
                         html += '<p> Local de publicação: <span>' + data.autor + '</span></p>';
                         html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
                         html += '<p>URL: <span>' + data.editora + '</span></p>';
@@ -283,7 +283,7 @@
 									
 									html += '<li>';
 										html += '<div class="comet-avatar">';
-											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 35px; height: 35px; object-fit: cover; border-radius: 50%">';
+											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 40px; height: 35px; object-fit: cover; border-radius: 50%">';
 										html += '</div>';
 										html += '<div class="we-comment">';
 											html += '<div class="coment-head">';
@@ -370,7 +370,7 @@
 						
 						html += '<div class="page-infos2">';
 							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
-						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
 						html += '<p> Diretor: <span>' + data.diretor + '</span></p>';
 						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
 						html += '<p>Elenco: <span>' + data.elenco + '</span></p>';
@@ -407,7 +407,7 @@
 									
 									html += '<li>';
 										html += '<div class="comet-avatar">';
-											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 35px; height: 35px; object-fit: cover; border-radius: 50%">';
+											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 40px; height: 35px; object-fit: cover; border-radius: 50%">';
 										html += '</div>';
 										html += '<div class="we-comment">';
 											html += '<div class="coment-head">';
@@ -483,8 +483,7 @@
 						html += '<div class="">';
 							
 						html += '<figure>';
-						html += '<a href="/page/' + data._id + '">';
-						html += '</a>';
+						
 						
 						
 						html += '</figure>';
@@ -495,7 +494,7 @@
 						
 						html += '<div class="page-infos2">';
 							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
-						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
 						html += '<p> Diretor: <span>' + data.diretor + '</span></p>';
 						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
 						html += '<p>Elenco: <span>' + data.elenco + '</span></p>';
@@ -529,7 +528,7 @@
 									
 									html += '<li>';
 										html += '<div class="comet-avatar">';
-											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 35px; height: 35px; object-fit: cover; border-radius: 50%">';
+											html += '<img src="' + mainURL + '/' + reply.user.profileImage + '" style="width: 40px; height: 35px; object-fit: cover; border-radius: 50%">';
 										html += '</div>';
 										html += '<div class="we-comment">';
 											html += '<div class="coment-head">';
