--- a/views/pagesLiked.ejs
+++ b/views/pagesLiked.ejs
@@ -44,8 +44,7 @@
 						html += '<li>';
 					html += '<div class="f-page">';
 					html += '<figure>';
-					html += '<a href="/page/' + data._id + '">';
-					html += '</a>';
+					
 					
 					html += '<em>' + data.likers.length + ' likes </em>';
 					html += '</figure>';
@@ -55,7 +54,7 @@
 							}
 					
 					html += '<div class="page-infos2">';
-					html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+					html += '<h4><a' + data._id + '">' + data.name + '</a></h4>';
 					html += '<p> Autor(es): <span>' + data.autor + '</span></p>';
 					html += '<p>Editora: <span>' + data.editora + '</span></p>';
 					html += '<p>País: <span>' + data.pais + '</span></p>';
