--- a/views/suggestFriends.ejs
+++ b/views/suggestFriends.ejs
@@ -76,7 +76,7 @@
 								html += '<li>';
 								html += '<div class="nearly-pepls">';
 								html += '<figure>';
-								html += '<a href="/user/' + data.username + '">';
+								html += '<a href="/user/' + data._id + '">';
 								html += '<img src="' + mainURL + '/' + data.profileImage + '" style="width: 60px; height: 60px;border-radius: 5px; object-fit:cover;">';
 								html += '</a>';
 								html += '</figure>';
